Enhance Docker setup and model training process for optimized deployment
- Updated .dockerignore to exclude unnecessary files for production.
- Added .env file for Docker Hub configuration.
- Modified Dockerfiles to copy necessary files and directories.
- Created OPTIMIZED_DEPLOYMENT_GUIDE.md for deployment instructions.
- Implemented checks for pre-trained model in build scripts.
- Added build-optimized.sh for streamlined Docker image building.
- Updated deploy.sh to correct port mapping for API.
- Introduced docker-compose.optimized.yml for simplified service management.
- Improved model initialization and loading in initialize_model.py.
- Enhanced training script to use CrossEntropyLoss for multi-class classification.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,9 @@
+# Sample Data (only needed for training, not production)
+Sample\ Data/
+sample_data/
+*.csv
+*.stepMixed
+
 # Python
 __pycache__/
 *.py[cod]
@@ -45,6 +51,12 @@ Thumbs.db
 
 # Jupyter Notebook
 .ipynb_checkpoints
+*.ipynb
+
+# Training and development scripts (not needed in production)
+train_and_save_model.py
+build-optimized.sh
+setup-docker.sh
 
 # Test files
 test_*.py
