--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,8 @@ dependencies = [
     "pandas>=2.0.0",
     "numpy>=1.24.0",
     "matplotlib>=3.7.0",
-    "jupyter>=1.0.0",
-    "ipykernel>=6.25.0",
     "scikit-learn>=1.3.0",
     "tqdm>=4.65.0",
-    "flask>=3.1.1",
     "fastapi>=0.115.13",
     "uvicorn>=0.34.3",
     "pydantic>=2.11.7",
@@ -24,7 +21,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0"]
+dev = ["pytest>=7.0.0", "black>=23.0.0"]
 
 [build-system]
 requires = ["hatchling"]
