--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.14",
+    "pandas>=2.3.0",
     "pydantic>=2.11.7",
     "scikit-learn>=1.7.0",
     "tensorflow>=2.19.0",
     "uvicorn>=0.34.3",
+    "websockets>=15.0.1",
 ]
