--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic>=2.11.7",
     "pyyml>=0.0.2",
     "scikit-learn>=1.7.0",
+    "seaborn>=0.13.2",
     "tensorflow>=2.19.0",
     "uvicorn>=0.34.3",
     "websockets>=15.0.1",
