Fix deployment command in CI/CD workflow to specify modal_app.py

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,4 +29,4 @@ jobs:
 
       - name: Deploy Modal App
         run: |
-          modal deploy -m modal_app
+          modal deploy -m modal_app.py
