Refactor code structure and remove redundant sections for improved readability and maintainability

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.115.14",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.3",
+    "modal>=1.1.0",
     "pandas>=2.3.0",
     "pydantic>=2.11.7",
     "pyyml>=0.0.2",
