--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pandas>=2.3.0",
     "pydantic>=2.11.7",
     "pyyml>=0.0.2",
+    "rich>=13.7.0",
     "scikit-learn>=1.7.0",
     "seaborn>=0.13.2",
     "tensorflow>=2.19.0",
