--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ pandas>=2.3.0
 pydantic>=2.11.7
 pyyaml>=0.0.2
 scikit-learn>=1.7.0
-tensorflow>=2.19.0
+torch>=2.3.0
 uvicorn>=0.34.3
 websockets>=15.0.1
